tests/ui/traits/new-solver/callable.new.stderr
error[E0277]: the trait bound `fn(i32) -> i32: Callable<()>` is not satisfied
  --> $DIR/callable.rs:10:12
   |
LL |     test::<fn(i32) -> i32>();
   |            ^^^^^^^^^^^^^^ the trait `Callable<()>` is not implemented for `fn(i32) -> i32`
   |
note: required by a bound in `test`
  --> $DIR/callable.rs:7:12
   |
LL | fn test<T: std::ops::Callable<()>>() {}
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `test`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
